Add acknowledgement to materials
Add acknowledgement

--- a/supervised+learning.ipynb
+++ b/supervised+learning.ipynb
@@ -4,10 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** scikit-learn User Guide**\n",
-    "\n",
+    "scikit-learn User Guide\n",
     "http://scikit-learn.org/stable/user_guide.html\n",
-    "\n",
     "http://scikit-learn.org/stable/modules/classes.html"
    ]
   },
@@ -22,11 +20,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this session, we will go through an example of supervised learning using the Iris data set. This data sets consists of 3 different types of irises' (Setosa, Versicolour, and Virginica) petal and sepal length, stored in a 150x4 `numpy.ndarray`. \n",
+    "Acknowledgement: some materials used here are from DataCamp's sklearn tutorial.\n",
     "\n",
-    "The columns of the array represents the petal and sepal's attributes: Sepal Length, Sepal Width, Petal Length and Petal Width. \n",
-    "\n",
-    "The rows of the array represents the observations for each attribute. "
+    "Supervised learning by iris data. This data sets consists of 3 different types of irises' (Setosa, Versicolour, and Virginica) petal and sepal length, stored in a 150x4 numpy.ndarray. The rows being the samples and the columns being: Sepal Length, Sepal Width, Petal Length and Petal Width."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Iris Data\n",
+    "Sepal length| Sepal width| Petal length| Petal width|    Species\n",
+    "        5.1\t     3.5\t   1.4\t          0.2\t          setosa\n",
+    "        4.9\t     3.0\t   1.4 \t          0.2     \t      setosa\n",
+    "        4.7\t     3.2\t   1.3            0.2     \t      setosa\n",
+    "        4.6\t     3.1\t   1.5\t          0.2 \t          setosa"
    ]
   },
   {
@@ -67,6 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -83,11 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['data', 'target', 'target_names', 'DESCR', 'feature_names'])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "iris.keys()"
    ]
@@ -95,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris.target_names   #access iris data like an Object"
@@ -105,17 +127,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "print(iris.DESCR)"
+    "iris.DESCR"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris['target'] # another way to access iris data like a dictionary"
@@ -124,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris['data']"
@@ -133,7 +160,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris.data.shape"
@@ -142,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "type(iris.data)"
@@ -154,7 +185,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exploratory data analysis**"
+    "**Exploratory data analysis"
    ]
   },
   {
@@ -190,7 +221,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(iris.feature_names)"
@@ -199,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(df.head())"
@@ -211,7 +246,7 @@
     "collapsed": true
    },
    "source": [
-    "**Visual exploratory data analysis**"
+    "Visual exploratory data analysis"
    ]
   },
   {
@@ -222,13 +257,15 @@
    },
    "outputs": [],
    "source": [
-    "_fig = pd.tools.plotting.scatter_matrix(df,c=y,figsize = [8,8],s=150,marker='D')"
+    "_fig = pd.plotting.scatter_matrix(df,c=y,figsize = [8,8],s=150,marker='D')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.show()"
@@ -238,7 +275,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## k-NN (k-nearest neighbors) Classification"
+    "k-NN classification\n",
+    "============================"
    ]
   },
   {
@@ -255,7 +293,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a k-NN classifier with 6 neighbors\n",
@@ -263,13 +303,18 @@
     "\n",
     "# Fit the classifier to the data\n",
     "#the features and targets are numpy arrays\n",
-    "knn.fit(iris['data'], iris['target']) "
+    "knn.fit(iris['data'], iris['target']) \n",
+    "KNeighborsClassifier(algorithm='auto', leaf_size=30,metric='minkowski',\n",
+    "                     metric_params=None, n_jobs=1,n_neighbors=6, p=2,weights='uniform')\n",
+    "                    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris['data'].shape"
@@ -278,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "iris['target'].shape"
@@ -296,7 +343,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prediction = knn.predict(X_new) #X_new is not defined"
@@ -308,8 +357,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exercise 1:**\n",
-    "\n",
+    "**Exercise 1:\n",
     "Create X_new to finish the prediction. Make sure the scikit-learn API will accept X_new as long as they are of the right shape."
    ]
   },
@@ -320,13 +368,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "X_new =  ____\n",
-    "y_new = iris['target'][20:100]\n",
-    "\n",
-    "prediction = knn.predict(X_new)\n",
-    "knn.score(X_new,y_new)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -334,15 +376,13 @@
     "collapsed": true
    },
    "source": [
-    "## Measuring model performance\n",
-    "\n",
-    "In reality, we will not train our model with the entire data set. Rather, we wil split them into \n",
-    "different portions for trainining and validation purposes. "
+    "Measuring model performance\n",
+    "============================"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
@@ -353,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -364,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -375,16 +415,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=8, p=2,\n",
+       "           weights='uniform')"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "knn.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
@@ -395,34 +448,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set predictions:\n",
+      " [2 1 2 2 1 0 1 0 0 1 0 2 0 2 2 0 0 0 1 0 2 2 2 0 1 1 1 0 0 1 2 2 0 0 1 2 2\n",
+      " 1 1 2 1 1 0 2 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Test set predictions:\\n {}\".format(y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Test set actual values: \\n {}\".format(y_test))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Scikit provides embedded testing function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9555555555555556"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "knn.score(X_test, y_test)"
    ]
@@ -433,7 +491,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exercise 2:**\n",
+    "**Exercise 2:\n",
     "\n",
     "Data set\n",
     "The MNIST digits recognition dataset has 10 classes, the digits 0 through 9. A reduced version of the MNIST dataset is one of scikit-learn's included datasets, and that is the one we will use in this exercise.\n",
@@ -476,46 +534,134 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Answer of the exercise 2:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
+   "source": [
+    "# Import necessary modules\n",
+    "from sklearn import datasets\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Load the digits dataset: digits\n",
+    "digits = datasets.load_digits()\n",
+    "\n",
+    "# Print the keys and DESCR of the dataset\n",
+    "print(digits.keys())\n",
+    "print(digits.DESCR)\n",
+    "\n",
+    "# Print the shape of the images and data keys\n",
+    "print(digits.images.shape)\n",
+    "print(digits.data.shape)\n",
+    "\n",
+    "# Display digit 1010\n",
+    "plt.imshow(digits.images[1010], cmap=plt.cm.gray_r, interpolation='nearest')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['data', 'target', 'target_names', 'images', 'DESCR'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(digits.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  0.   0.   7.  15.  13.   1.   0.   0.]\n",
+      " [  0.   8.  13.   6.  15.   4.   0.   0.]\n",
+      " [  0.   2.   1.  13.  13.   0.   0.   0.]\n",
+      " [  0.   0.   2.  15.  11.   1.   0.   0.]\n",
+      " [  0.   0.   0.   1.  12.  12.   1.   0.]\n",
+      " [  0.   0.   0.   0.   1.  10.   8.   0.]\n",
+      " [  0.   0.   8.   4.   5.  14.   9.   0.]\n",
+      " [  0.   0.   7.  13.  13.   9.   0.   0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(digits.images[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  0.   0.   7.  15.  13.   1.   0.   0.   0.   8.  13.   6.  15.   4.   0.\n",
+      "   0.   0.   2.   1.  13.  13.   0.   0.   0.   0.   0.   2.  15.  11.   1.\n",
+      "   0.   0.   0.   0.   0.   1.  12.  12.   1.   0.   0.   0.   0.   0.   1.\n",
+      "  10.   8.   0.   0.   0.   8.   4.   5.  14.   9.   0.   0.   0.   7.  13.\n",
+      "  13.   9.   0.   0.]\n"
+     ]
+    }
+   ],
    "source": [
     "print(digits.data[3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1797, 8, 8)\n"
+     ]
+    }
+   ],
    "source": [
     "print(digits.images.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1797, 64)\n"
+     ]
+    }
+   ],
    "source": [
     "print(digits.data.shape)"
    ]
@@ -526,7 +672,7 @@
     "collapsed": true
    },
    "source": [
-    "**Exercise 3:**\n",
+    "**Exercise 3:\n",
     "\n",
     "Train/Test Split + Fit/Predict/Accuracy\n",
     "\n",
@@ -570,12 +716,65 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "** Exercise 4: **\n",
+    "**Answer of the exercise 3:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.984444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import necessary modules\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Create feature and target arrays\n",
+    "X = digits.data\n",
+    "y = digits.target\n",
+    "\n",
+    "# Split into training and test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state=30, stratify=y)\n",
+    "\n",
+    "# Create a k-NN classifier with 7 neighbors: knn\n",
+    "knn = KNeighborsClassifier(n_neighbors=7)\n",
+    "\n",
+    "# Fit the classifier to the training data\n",
+    "knn.fit(X_train,y_train)\n",
+    "\n",
+    "# Print the accuracy\n",
+    "print(knn.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Exercise 4:\n",
     "\n",
     "By observing how the accuracy scores differ for the training and testing sets with different values of k, you will develop your intuition for overfitting and underfitting.\n",
     "\n",
@@ -598,7 +797,7 @@
    "outputs": [],
    "source": [
     "# Setup arrays to store train and test accuracies\n",
-    "neighbors = np.arange(1, 30)\n",
+    "neighbors = np.arange(1, 9)\n",
     "train_accuracy = np.empty(len(neighbors))\n",
     "test_accuracy = np.empty(len(neighbors))\n",
     "\n",
@@ -625,6 +824,106 @@
     "plt.ylabel('Accuracy')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Answer of the exercise 4:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Setup arrays to store train and test accuracies\n",
+    "neighbors = np.arange(1, 9)\n",
+    "train_accuracy = np.empty(len(neighbors))\n",
+    "test_accuracy = np.empty(len(neighbors))\n",
+    "\n",
+    "# Loop over different values of k\n",
+    "for i, k in enumerate(neighbors):\n",
+    "    # Setup a k-NN Classifier with k neighbors: knn\n",
+    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "\n",
+    "    # Fit the classifier to the training data\n",
+    "    knn.fit(X_train,y_train)\n",
+    "    \n",
+    "    #Compute accuracy on the training set\n",
+    "    train_accuracy[i] = knn.score(X_train, y_train)\n",
+    "\n",
+    "    #Compute accuracy on the testing set\n",
+    "    test_accuracy[i] = knn.score(X_test, y_test)\n",
+    "\n",
+    "# Generate plot\n",
+    "plt.title('k-NN: Varying Number of Neighbors')\n",
+    "plt.plot(neighbors, test_accuracy, label = 'Testing Accuracy')\n",
+    "plt.plot(neighbors, train_accuracy, label = 'Training Accuracy')\n",
+    "plt.legend()\n",
+    "plt.xlabel('Number of Neighbors')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -643,7 +942,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
